<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nice295.coffeeplease.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/robot_avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="24dp"
            android:text="@string/main_header"
            android:textAlignment="viewStart"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/image_coffee">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/coffee_divier"
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:text="@string/coffee" />

        <ImageView
            android:id="@+id/coffee_divier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee_divier"
            android:layout_centerVertical="true"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:text="@string/hot_ice" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/image_breakfast">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/coffee_divier"
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:text="@string/breakfast" />

        <ImageView
            android:id="@+id/coffee_divier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee_divier"
            android:layout_centerVertical="true"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:text="@string/bread_sandwitch" />
    </RelativeLayout>

</LinearLayout>
